# ffmpeg_harmony_os

./: .gitignore  CHANGELOG.md  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/ets/pages/: AudioPlayerDemo.ets  Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: main_pages.json
ffmpeg/: CHANGE.md  CHANGELOG.md  Index.ets  README.md  build-profile.json5  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
ffmpeg/src/main/: module.json5
ffmpeg/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ffmpeg/src/main/cpp/av/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioItem.cpp  AudioItem.h  AudioPlaybackOptions.h  AudioPlayer.cpp  AudioPlayer.h  AudioReader.cpp  AudioReader.h  AudioTranscoder.cpp  AudioTranscoder.h  EventMessage.h  EventMessageQueue.cpp  EventMessageQueue.h  PlayWhenReadyChangeReason.h  ff_audio_const.hpp  ff_audio_player.cpp  ff_audio_player.hpp  ff_audio_renderer.cpp
ffmpeg/src/main/cpp/av/core/: AudioEncoder.cpp  AudioEncoder.h  AudioFifo.cpp  AudioFifo.h  AudioMuxer.cpp  AudioMuxer.h  AudioRenderer.cpp  AudioRenderer.h  AudioResampler.cpp  AudioResampler.h  AudioUtils.cpp  AudioUtils.h  AudioWriter.cpp  AudioWriter.h  FilterGraph.cpp  FilterGraph.h  MediaDecoder.cpp  MediaDecoder.h  MediaReader.cpp  MediaReader.h  PacketQueue.cpp  PacketQueue.h  StreamReader.cpp  StreamReader.h  Test.cpp  Test.h  ff_audio_packet_reader.cpp  ff_audio_packet_reader.hpp  ff_audio_transcoder.cpp  ff_audio_transcoder.hpp  ff_packet_queue.cpp
ffmpeg/src/main/cpp/av/ffwrap/: ff_audio_item.cpp  ff_audio_item.hpp  ff_audio_transcoder.cpp  ff_audio_transcoder.hpp  ff_const.hpp  ff_media_reader.cpp  ff_media_reader.hpp  ff_packet_queue.cpp  ff_packet_queue.hpp  ff_packet_reader.cpp  ff_packet_reader.hpp  ff_sample_buf.cpp  ff_sample_buf.h  ff_single_stream_audio_transcoder.cpp  ff_single_stream_audio_transcoder.hpp  ff_stream_provider.hpp
ffmpeg/src/main/cpp/av/util/: NetworkReachability.cpp  NetworkReachability.h  OHAudioStreamUtils.cpp  OHAudioStreamUtils.hpp  TaskScheduler.cpp  TaskScheduler.h
ffmpeg/src/main/cpp/av/utils/: TaskScheduler.cpp  TaskScheduler.h  logger.cpp  logger.h
ffmpeg/src/main/cpp/extension/: client_print.cpp  client_print.h  execute_cmds.cpp  execute_cmds.h  ff_ctx.cpp  ff_ctx.h  log_callback.cpp  log_callback.h  log_level.cpp  log_level.h  native_ctx.cpp  native_ctx.h  output_callback.cpp  output_callback.h  progress_callback.cpp  progress_callback.h  task.c  task.h  task_mgr.cpp  task_mgr.h  utils.cpp  utils.h
ffmpeg/src/main/cpp/fftools/: cmdutils.c  cmdutils.h  config.h  config_arm64-v8a.h  config_x86_64.h  ffmpeg.c  ffmpeg_mux.c  ffmpeg_opt.c  ffprobe.c  fftools_common.c  fftools_common.h  opt_common.c  opt_common.h  thread_variables.c  thread_variables.h
ffmpeg/src/main/cpp/fftools/interaction/: ff_ctx.cpp  log_callback.cpp  log_callback.h  output_callback.cpp  output_callback.h  progress_callback.cpp  progress_callback.h
ffmpeg/src/main/cpp/general/: FFAbortController.cpp  FFAudioPlayer.cpp  FFAudioPlayer.h  FFAudioWriter.cpp  FFAudioWriter.h  FFPlayWhenReadyChangeReason.h  FFmpeg.cpp  FFmpeg.h
ffmpeg/src/main/cpp/types/libffmpeg/: Index.d.ts  oh-package.json5
ffmpeg/src/main/ets/components/: FFAbortController.ets  FFCommandInspector.ets  FFProgressMessageParser.ets  FFmpeg.ets
filemgr/src/main/ets/components/: FileMgr.ets
